Add recipes and images

--- a/recipes/lasgna.html
+++ b/recipes/lasgna.html
@@ -5,5 +5,23 @@
 </head>
 <body>
     <h1>Lasagna Recipes</h1>
+    <h2>Ingridients</h2>
+    <ol>
+        <li>meat</li>
+        <li>tomato</li>
+        <li>onion and garlic</li>
+        <li>sugar</li>
+        <li>egg</li>
+        <li>lasagna noodles</li>
+    </ol>
+    <h2>Preparation</h2>
+    <ol>
+        <li>Use your brain</li>
+        <li>OPen your browser</li>
+        <li>Google it</li>
+        <li>Try it and give me the food I'm hungry please help</li>
+    </ol>
+    <img src="images/lsagna.jpeg" alt="smd">
+
 </body>
 </html>
