--- a/recipes/pasta.html
+++ b/recipes/pasta.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     <h1>pasta</h1>
-    
+    <h2>Ingridients</h2>
+    <ul>
+        <li>pasta</li>
+        <li>pasta paste</li>
+        <li>onion and garlif</li>
+        <li>tomato</li>
+    </ul>
+    <h2>Preparation</h2>
+    <ol>
+        <li>Use your brain</li>
+        <li>OPen your browser</li>
+        <li>Google it</li>
+        <li>Try it and give me the food I'm hungry please help</li>
+    </ol>
+    <img src="images/pasta.jpeg" alt="smc">
 </body>
 </html>
