--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <title>big whank</title>
@@ -9,6 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/lasgna.html">Lasgana</a></li>
+        <li><a href="recipes/pasta.html">Pazta</a></li>
+        <li><a href="recipes/pizza.html">pissa</a></li>
     </ul>
     
 </body>
